# mux

./: .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  index.html  package.json  release-please-config.json  tsconfig.json
.github/: AUTOFIX.md  copilot-instructions.md  dependabot.yml  fast-lane.json
.github/rulesets/: README.md  main.json  tags.json
.github/scripts/: assign-copilot.sh  publish-release-assets.sh  quality-failure-monitor.sh  quality-failure-monitor.test.sh  release-scripts.test.sh  wait-for-verify.sh
.github/workflows/: build-desktop.yml  direct-stable-release.yml  fast-lane-expiry.yml  issue-autofix.yml  quality-monitor.yml  release-please.yml  repair-review-notify.yml
analysis/: 01-stable-release-flow.md  02-why-claude-skills-affect-opencode.md  03-agent-configuration-audit-2026-07-21.md  04-agent-expansion-audit-2026-07-22.md  05-core-architecture-refactor.md  06-current-code-architecture.md
analysis/agent-capability-audit/: README.md  acp-registry-source-discovery.json  catalog-a-m-evidence.md  catalog-n-z-evidence.md  catalog-source-discovery.json  coverage-baseline.json  coverage-baseline.md  final-report.md  implementation-gap.md  repository-evidence-snippets.json  repository-tree-scans.json  verified-agents-evidence.md
cli/: Cargo.toml
cli/src/: main.rs
cli/src/tui/: effect.rs  message.rs  mod.rs  model.rs  update.rs
cli/src/tui/view/: agents.rs  editor.rs  mod.rs  modal.rs  registry.rs  sources.rs  theme.rs
core/: Cargo.toml
core/src/: adapter.rs  agents.rs  applier.rs  assets.rs  codec.rs  consumption.rs  differ.rs  disabled.rs  effective.rs  json_adapter.rs  lib.rs  model_adapters.rs  models.rs  network.rs  ops.rs  override.rs  paths.rs  pinned_agents.rs  registry.rs  safe_write.rs  scanner.rs  settings.rs  skills.rs  sources.rs  testenv.rs  toml_adapter.rs  toml_list_adapter.rs  types.rs  update.rs  yaml_adapter.rs
core/src/application/: agents.rs  assets.rs  bootstrap.rs  error.rs  gate.rs  mcp.rs  mod.rs  models.rs  network.rs  operations.rs  skills.rs  ui.rs  update.rs  workspace.rs
core/src/assets/: compatibility.rs  inventory.rs  lifecycle.rs  migration.rs  model_migration.rs  planner.rs  transaction.rs
core/src/consumption/: compatibility.rs  inventory.rs  lifecycle.rs  migration.rs  model_migration.rs  planner.rs  transaction.rs  types.rs
core/src/domain/: agents.rs  assets.rs  error.rs  mcp.rs  mod.rs  skill.rs  types.rs
core/src/resources/: mod.rs
core/src/resources/mcp/: adapter.rs  applier.rs  codec.rs  differ.rs  disabled.rs  effective.rs  json_adapter.rs  mod.rs  ops.rs  override.rs  registry.rs  scanner.rs  sources.rs  toml_adapter.rs  toml_list_adapter.rs  yaml_adapter.rs
core/src/resources/model/: adapters.rs  mod.rs
core/src/resources/skill/: anchored.rs  audit.rs  files.rs  inventory.rs  manifest.rs  mod.rs  ops.rs  source.rs  staging.rs  transaction.rs  types.rs  update.rs
core/src/skills/: anchored.rs  audit.rs  files.rs  inventory.rs  manifest.rs  ops.rs  paths.rs  source.rs  staging.rs  transaction.rs  types.rs  update.rs
core/tests/: agent_formats.rs  application_architecture.rs  central_assets_e2e.rs  consumption_inventory.rs  disable_flow.rs  forget_flow.rs  resync_flow.rs  skills_import_flow.rs  skills_install_flow.rs  skills_inventory.rs  skills_recovery.rs  skills_remove_repair.rs  skills_source.rs  skills_update_flow.rs
core/tests/fixtures/: cline.json  codex.toml  gemini.json  grok-build.toml  minimax-code.json  opencode.json  windsurf.json
core/tests/fixtures/skills/risky/: SKILL.md
core/tests/fixtures/skills/risky/scripts/: install.sh
core/tests/fixtures/skills/safe/: SKILL.md
core/tests/fixtures/skills/safe/references/: guide.md
core/tests/support/: skills.rs
data/: agent-catalog.json  agents.json  registry.json
desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/scripts/: prepare-sidecar.sh
desktop/src/: App.tsx  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: cli_tool.rs  commands.rs  lib.rs  updater_guard.rs
desktop/src-tauri/src/core/: adapter.rs  agents.rs  applier.rs  differ.rs  disabled.rs  effective.rs  json_adapter.rs  mod.rs  override.rs  paths.rs  registry.rs  scanner.rs  settings.rs  sources.rs  toml_adapter.rs  types.rs
desktop/src-tauri/tests/: consumption_commands.rs  edit_propagation.rs  install_flow.rs  manual_flow.rs  paste_import.rs  rename_flow.rs  skills_commands.rs  sources_flow.rs
docs/: agent-catalog.md  tui-architecture.md
script/: build_and_run.sh
scripts/: build-agent-capability-baseline.mjs  check-agent-icons.mjs  discover-acp-registry-agents.mjs  discover-agent-catalog-sources.mjs  extract-agent-repository-evidence.mjs  extract-agent-repository-evidence.test.mjs  extract-data.ts  release-version.mjs  release-version.test.mjs  scan-agent-repository-trees.mjs  update-agent-catalog.mjs  validate-agent-capability-audit.mjs  workflow-contract.test.mjs
src/: builtin-registry.ts  constants.ts  index.ts  types.ts
src/adapters/: adapter.ts  index.ts  json-adapter.ts  toml-adapter.ts
src/commands/: add.ts  agents-cmd.ts  apply.ts  clean.ts  import.ts  list.ts  remove.ts  status.ts
src/core/: agents.ts  applier.ts  differ.ts  key.ts  registry.ts  scanner.ts  settings.ts  sources.ts  state.ts
src/tui/: add-view.tsx  app.tsx  breathing-border.tsx  config-panel.tsx  (+9 more)
website/: index.md  package-lock.json  package.json  vercel.json
(+204 files in other folders)
