[package]
name = "mux-cli"
version = "1.8.8"
edition = "2021"

[[bin]]
name = "mux"
path = "src/main.rs"

[dependencies]
mux-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm", "underline-color"] }
crossterm = "0.29"
fuzzy-matcher = "0.3"
serde_json = "1"
