[package]
name = "mux-core"
version = "1.2.14"
edition = "2021"
description = "Shared MCP config-management core for the MUX CLI and desktop app"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = { version = "=0.20.2", features = ["serde"] }
jsonc-parser = { version = "0.32", features = ["cst", "serde_json"] }
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
yaml-edit = "0.2.3"
chrono = "0.4"
dirs = "5"
ureq = "2"
