[package]
name = "mux-core"
version = "1.8.55"
edition = "2021"
description = "Shared MCP, Model, Skill, Agent, and transaction core for MUX frontends"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.3"
toml_edit = { version = "=0.20.2", features = ["serde"] }
jsonc-parser = { version = "0.32", features = ["cst", "serde_json"] }
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
yaml-edit = "0.2.3"
chrono = "0.4"
dirs = "5"
flate2 = "1"
fs2 = "0.4"
tar = "0.4"
zip = { version = "4.6.1", default-features = false, features = ["deflate-flate2"] }
ureq = { version = "3", features = ["socks-proxy"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.11"
hex = "0.4"
regex = "1"
similar = "3"
plist = "1"
zeroize = "1"

[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["fs"] }
