[package]
name = "desktop"
version = "1.2.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = "0.4"
dirs = "5"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
ureq = "2"
mux-core = { path = "../../core" }

# Tuned for CI build time (and a smaller dmg). Runtime perf is irrelevant for a
# config-manager GUI, so we trade a little optimization for faster compiles.
[profile.release]
codegen-units = 256   # more parallel codegen → faster compile
opt-level = 2         # 2 vs 3 is imperceptible here, compiles quicker
strip = true          # strip symbols → smaller binary, no separate strip step
